css/style.css
/* ... */
	.taskActionRowCompletCheckbox {
		text-align: center;
	}
	
	.checkBoxLabel {
		float: right;
		margin-top: .5rem;
		cursor: pointer;
	}


	.deleteTaskIcon {
		margin-left: .5rem;
		margin-right: .3rem;
		font-size: 1.25rem;
/*		float: right;*/
		

	}
	/*
	.card-text {
		margin-left: 3rem;
	}
*/
	
/*
	.taskDate::after {
		font-family: "FontAwesome";
			color: rgb(132, 226, 239);
		color: #9a9696;
		font-weight: 100;
		margin-left: 10px;
		content: " \f01e";
	}
*/
/* Add if task is repeating */
/*
	.fa-repeat {
		display: inline-block;
		margin-left: 10px;
		color: #34AFA9;
		float: right;
	}
*/
.taskDetails {
	margin-right: .5rem;
	color: #adaaaa;
}
.taskDue {
	margin-right: .5rem;
	color: #adaaaa;
	padding-top: .5rem;
}
.taskListName {
	text-transform: uppercase;
	letter-spacing: .09rem;
	margin-bottom: 0;
}
/**********  Task Actions START  ********************/

.actionTaskLabel {
	color: #2cb5a3;
	font-size: .75rem;
	margin-top: .6rem;
	cursor: pointer;
	letter-spacing: .2rem;
}
.expandTaskActions {
	font-size: 1.2rem;
	margin-right: .5rem;
	margin-top: .5rem;
	color: #2cb5a3;			
	-webkit-transition: -webkit-transform .7s ease-in-out;
	transition: -webkit-transform .7s ease-in-out;
	/*	Transform for rotating plus symbol */
	transition: transform .7s ease-in-out;
	transition: transform .7s ease-in-out, -webkit-transform .7s ease-in-out;
}

.taskActionRow {
/*
	overflow: hidden;
	position: absolute;
*/
    opacity: 0;
	max-height: 0; 
	
 	/*  Supposed to slowly reveal Task Actions However space snaps open/closed rather than slowly opening space. Note: Task actions do fade-in (with opacity) transition but max-height seems to be ignored */
	

    -webkit-transition: opacity 1.5s, max-height .9s ease-in-out;
  
    transition: opacity 1.5s, max-height .9s ease-in-out;
	

	cursor: pointer;
}

input[name=taskCompleteStatus] {
	margin-top: 0;
}

/* Tried using animation on max height didn't seem to work -- So this could be deleted*/
@-webkit-keyframes disappear {
	0% { max-height: 100%;}
	25% { max-height: 75%}
    50% { max-height: 50%;}
	75% { max-height: 25%}
	100% {max-height: 0;}
}

@keyframes disappear {
	0% { max-height: 100%; }
	25% { max-height: 75% }
    50% { max-height: 50%; }
	75% { max-height: 25% }
	100% { max-height: 0%; }
}

/*
@-webkit-keyframes disappear {
	0% { max-height: 0%;}
	25% { max-height: 25%}
    50% { max-height: 50%;}
	75% { max-height: 75%}
	100% {max-height: 100%;}
}

@keyframes disappear {
	0% { max-height: 0%;}
	25% { max-height: 25%}
    50% { max-height: 50%;}
	75% { max-height: 75%}
	100% {max-height: 100%;}
}
*/


/*
@-webkit-keyframes disappear {
	0% {opacity: 100%;}
	25% {opacity: 75%}
    50% {opacity: 50%;}
	75% {opacity: 25%}
	100% {opacity: 0%;}
}



@keyframes disappear {
	0% {opacity: 100%;}
	25% {opacity: 75%}
    50% {opacity: 50%;}
	75% {opacity: 25%}
	100% {opacity: 0%;}
}
*/



.taskActionRow.materialize {
/*
	overflow: hidden;
 	position: static;
*/
	max-height: 100%;
    opacity: 1;
	cursor: pointer;
	
	/* Tried Animate taskActionRow height going to zero BUT DIDN'T WORK */
/*
	-webkit-animation: disappear 1s;
	animation: disappear 1s;
*/
}

.expandTaskActions.rotateIt {
	-webkit-transform:rotate(-225deg);
	transform:rotate(-225deg);
}
/*
.actionTaskLabel:hover::before {
	font-size: 1.5rem;
	-webkit-transform:rotate(30deg);
	transform:rotate(30deg);
}
*/
.editTaskIcon {
	margin-right: .3rem;
	font-size: 1.25rem;
}

/**********  Task Actions END  **********************/


.floatLeft {
	float: left;
}
.clearBoth {
	clear: both;
}

/********************************/

	.taskCategory {
		/*	margin-top: 2rem;*/
		padding-left: 3rem;
		font-size: 2rem;
		color: #34AFA9;
		letter-spacing: .4rem;
	}
	
	.overDue {
		/*	color: #b52020;*/
		color: #e46767 !important;
	}
	
	.floatAddBtn {
		opacity: .6;
		width: 3rem;
		height: 3rem;
		color: #fff;
		background-color: #44e3ce;
		background-color: #34AFA9;
		border-radius: 50%;
		position: absolute;
		cursor: pointer;
		text-align: center;
		font-size: 2rem;
		z-index: 999;
		/*	transform-origin: 50% 50%;*/
		right: 10rem;
		bottom: 10rem;
		right: 10%;
		bottom: 25%;
		position: fixed;
		-webkit-box-shadow: 0 0 6px rgba(0, 0, 0, 0.12), 0 6px 6px rgba(0, 0, 0, 0.24);
		box-shadow: 0 0 6px rgba(0, 0, 0, 0.12), 0 6px 6px rgba(0, 0, 0, 0.24);
	}
	
	.floatAddBtn i.fa {
		color: white;
	}
	
	.floatAddBtn:hover {
		-webkit-box-shadow: 0 0 12px rgba(0, 0, 0, 0.12), 0 12px 12px rgba(0, 0, 0, 0.24);
		box-shadow: 0 0 12px rgba(0, 0, 0, 0.12), 0 12px 12px rgba(0, 0, 0, 0.24);
	}
	/* Add New list submenu item on All List menu  */
	
	article a:link,
	article a:visited,
	article a:hover,
	article a:active {
		text-decoration: none;
		color: #34AFA9;
	}
	/* Modal Window */
	
	.modal-title {
		color: #636c72;
	}
	/* Btn styling */
	
	.button-group {
		text-align: center;
		margin-top: 6rem;
	}
	
	button {
		margin: 2rem;
		margin-top: 0;
	}
	
	.takeActionBtn {
		background-color: #34AFA9;
		font-weight: bold;
		color: #fff;
	}
	
	.takeActionBtn:hover {
		background-color: #2C9893;
		font-weight: bold;
		color: #fff;
	}
	
	footer {
		position: fixed;
		bottom: 0;
		width: 100%;
		padding: 1% 5%;
		background-color: #34AFA9;
		font-family: "Open Sans", sans-serif;
	}
	
	footer p {
		padding: 10px 0px;
		text-align: center;
	}



	/*****************************************************************/
	/* Edit & New Task List Page */
	/*****************************************************************/
	/* Make sure footer doesn't block content of Edit Task Screen */
	
	.editTaskPage,
	.newTaskPage {
		margin-bottom: 5rem;
	}
	/* Nav bar styling */
	
	.floatRight {
		float: right;
	}
	
	nav .screenTitle {
		position: absolute;
		left: 50%;
		-webkit-transform: translateX(-50%);
		transform: translateX(-50%);
		font-weight: bold;
		font-size: 1.5rem;
	}
	
	nav .screenTitle {
		pointer-events: none;
		cursor: default;
	}
/* ... */

